17Jun00=======================================================================
1. I believe I have fixed all the login/logout 'broken pipe' errors
2. Added G0RDI's 'links' command.
3. added update_sysop.pl which cleans out all previous versions of the sysops
information from the user database and recreates it with that in DXVars.pm
14Jun00=======================================================================
1. fixed sh/node crash
2. fixed RTT in who.pl
13Jun00=======================================================================
1. fixed looping bug in C client on ending.
12Jun00=======================================================================
1. Added RCMD for clx
2. Added WCY processing
3. Added new node types (clx, spider, dxnet, arcluster)
4. Store echo settings
5. Store pagelth settings
6. sort out source of DXVars for callbot.pl
7. added sh/isolate
8. added sh/lockout 
11Jun00=======================================================================
1. removed extraneous DXDebug from DXUtil
2. added help for set/echo
3. Centralised all spot, wwv and ann dup handling into respective packages.
4. Created new AnnTalk package (for above and OOing announce and talk 
handling).
5. Fixed problem with outputting lines with | in them to console.pl.
10Jun00=======================================================================
1. got rid of some more nasty bugs in sh/qra.
2. fixed 9A3xx to always be Croatia (and not Haiti!).
09Jun00=======================================================================
1. change some print commands in DXMsg to dbg('err'...
2. overloaded confess, croak et al into DXDebug and removed Carp from 
everywhere and checked that the necessary debugging really does go into
the debug files now.
3. changed print statements in cluster.pl to dbg('err',... so they go into
the debug files as well.
4. Altered the logic around duplicate spots, reduced the length of comment
checked to 20 characters (this should solve some problems including those